Fix cooperands alignment

--- a/src/components/Cooperands/Cooperands.module.scss
+++ b/src/components/Cooperands/Cooperands.module.scss
@@ -17,7 +17,7 @@
     }
     .cooperandsContainer {
         display: grid;
-        gap: 10px;
+        gap: 15px;
         width: 100%;
         box-sizing: border-box;
         margin-top: 0;
@@ -29,7 +29,7 @@
             width: 100%;
             display: flex;
             align-items: center;
-            justify-content: left;
+            justify-content: center;
             &:nth-of-type(9),
             &:nth-of-type(8) {
                 @include media(sm) {
